--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongoose": "^9.1.3",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "resend": "^6.7.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
