Implement Supabase Auth with email verification

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,3 @@
-MONGODB_URI=mongodb+srv://rajg50103_db_user:Z397Zt1HeJe4iRpd@cluster0.9zkupes.mongodb.net/technology
-JWT_SECRET=fb839958e23b28b7e8023c9140c867a91275d3a5
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-# 
+NEXT_PUBLIC_SUPABASE_URL=https://ysguhbsiyzkjjxrifdmt.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_X44j77iRHybtzp8vr-FJ-A_zE0Ot-X5
+# SUPABASE_SERVICE_ROLE_KEY=sb_secret_PkXUdZZRZEqzjSeTqg3tVQ_uMTxGbi0
