Remove MongoDB files

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_SUPABASE_URL=https://ysguhbsiyzkjjxrifdmt.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_X44j77iRHybtzp8vr-FJ-A_zE0Ot-X5
 # SUPABASE_SERVICE_ROLE_KEY=sb_secret_PkXUdZZRZEqzjSeTqg3tVQ_uMTxGbi0
-DATABASE_URL=postgresql://postgres:manasg%401412@db.ysguhbsiyzkjjxrifdmt.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres:manasg@1412@db.ysguhbsiyzkjjxrifdmt.supabase.co:5432/postgres
